# turbo-octo-couscous

./: .gitignore  Cargo.toml  README.md  justfile  pyproject.toml
crates/anomaly-detector/: Cargo.toml
crates/anomaly-detector/src/: main.rs
crates/threshold-checker/: Cargo.toml
crates/threshold-checker/src/: lib.rs
db/: migrate.py
db/migrations/: 001_initial.sql  002_machines.sql  003_sensors.sql  004_readings.sql
db/seeds/: generate.py
docs/: architecture.md
src/api/: config.py  deps.py  main.py
src/api/routers/: factories.py  health.py  machines.py  readings.py  sensors.py
src/core/db/: engine.py  models.py
src/core/schemas/: factory.py  machine.py  reading.py  sensor.py
src/core/services/: anomaly_client.py  factory_svc.py  machine_svc.py  reading_svc.py  sensor_svc.py  threshold.py
