[project]
name = "turbo-octo-couscous"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CodeTex", email = "29424456+CodeTex@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
